--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -125,22 +125,44 @@
                                             </ul>
                                         </div>
                                     </div>
+                                    <% if(products[i].offer){ %>
+                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Orginal Price<span class="ml-2"> <%= totalPrice %>₹ </span>
+                                        </div>
+                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Offer Price<span id="subTotal" class="ml-2 text-xs"> <%= products[i].offer %>₹ </span>
+                                        </div>
+                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Shipping Tax<span class="ml-2">00.00₹</span>
+                                        </div>
+                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
+                                        </div>
+                                        <div class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Total<span id="totalPrice" class="ml-2"> <%= products[i].offer %>₹ </span>
+                                        </div>
+                                        <% }else{ %>
+                                    <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                        Subtotal<span id="subTotal" class="ml-2"> <%= totalPrice %>₹ </span>
+                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Shipping Tax<span class="ml-2">00.00₹</span>
+                                        </div>
+                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
+                                        </div>
+                                        <div class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
+                                            Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹ </span>
+                                        </div>
+                                    </div>
+                                    
+                                    <% } %>
+                                   
                                 <% } %>
                             </div>
                                 </div>
 
-                                <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                    Subtotal<span id="subTotal" class="ml-2"> <%= totalPrice %>₹ </span>
-                                </div>
-                                <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                    Shipping Tax<span class="ml-2">00.00₹</span>
-                                </div>
-                                <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                    Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
-                                </div>
-                                <div class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                    Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹ </span>
-                                </div>
+                               
+                              
                             </div>
                         </div>
                     </div>
