--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -104,68 +104,67 @@
                 </section>
             </div>
             <!-- Right Section -->
-            <div id="rightSection" class="lg:w-1/3 lg:pl-4 mt-4 lg:mt-0">
-                <section class=" border border-gray-900">
-                    <div class="flex flex-col w-full ml-0 lg:ml-12 lg:w-2/5 mt-5">
+            <section class=" border border-gray-900 flex flex-col" id="rightSection" >
+            <div class="lg:w-3/3 lg:pl-4 mt-4 lg:mt-0">
+                    <div class="flex flex-col w-full ml-0 lg:ml-12 lg:w-4/5 mt-5">
                         <div class="pt-12 md:pt-0 2xl:ps-4 bg-white border border-gray-900">
                             <h2 class="text-xl font-bold">Order Summary</h2>
                             <div class="mt-8">
-                  <div class="container">
+                             <div class="container">
                                 <% for (let i = 0; i < products.length; i++) { %>
                                     <div class="flex-col space-x-4 mt-4 mb-4">
                                         <div>
                                             <img src="/product_images/<%= products[i].productImage[0] %>" alt="image" class="w-28 h-32 rounded-xl">
                                         </div>
-                                        <div>
+                                        <div class="text-center">
                                             <h2 class="text-md font-bold"><%= products[i].productName %></h2>
                                             <ul>
-                                                <li class="flex text-xs flex-wrap gap-4">Size: <span class="text-end"><%= products[i].size %></span></li>
-                                                <li class="flex text-xs flex-wrap gap-4">Total Price: <span class="text-end"><%= products[i].price %></span></li>
-                                                <li class="flex text-xs flex-wrap gap-4">Quantity: <span class="text-end"><%= quantity[i] %></span></li>
+                                                <li class="text-xs"><p>Size: <span class="text-end"><%= products[i].size %></span></p></li>
+                                                <li class="text-xs"><p>Total Price: <span class="text-end"><%= products[i].price %></span></p></li>
+                                                <li class="text-xs"><p>Quantity: <span class="text-end"><%= quantity[i] %></span></p></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <% if(products[i].offer){ %>
-                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Orginal Price<span class="ml-2"> <%= totalPrice %>₹ </span>
+                                        <div class=" mt-4 mb-4">
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Original Price<span class="ml-2"> <%= totalPrice %>₹ </span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Offer Price<span id="subTotal" class="ml-2 text-xs"> <%= products[i].offer %>₹ </span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Shipping Tax<span class="ml-2">00.00₹</span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Total<span id="totalPrice" class="ml-2"> <%= products[i].offer %>₹ </span>
+                                            </div>
                                         </div>
-                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Offer Price<span id="subTotal" class="ml-2 text-xs"> <%= products[i].offer %>₹ </span>
+                                        <% } else { %>
+                                        <div class="flex flex-col mt-4 mb-4">
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Subtotal<span id="subTotal" class="ml-2"> <%= totalPrice %>₹ </span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Shipping Tax<span class="ml-2">00.00₹</span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
+                                            </div>
+                                            <div class="flex flex-col items-start w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-28 text-heading last:border-b-0 last:text-base last:pb-0">
+                                                Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹ </span>
+                                            </div>
                                         </div>
-                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Shipping Tax<span class="ml-2">00.00₹</span>
-                                        </div>
-                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
-                                        </div>
-                                        <div class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Total<span id="totalPrice" class="ml-2"> <%= products[i].offer %>₹ </span>
-                                        </div>
-                                        <% }else{ %>
-                                    <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                        Subtotal<span id="subTotal" class="ml-2"> <%= totalPrice %>₹ </span>
-                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Shipping Tax<span class="ml-2">00.00₹</span>
-                                        </div>
-                                        <div class="flex items-center w-full py-4 text-xs font-thin border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Discount Amount<span id="discountAmount" class="ml-2">00.00₹</span>
-                                        </div>
-                                        <div class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                                            Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹ </span>
-                                        </div>
-                                    </div>
-                                    
-                                    <% } %>
-                                   
-                                <% } %>
-                            </div>
+                                         <% } %>
+                                       <% } %>
+                                  </div>
                                 </div>
-
-                               
-                              
+                              </div>
                             </div>
                         </div>
-                    </div>
                 </section>
             </div>
     </main>
